css/main.css
/**
 * COLORS:
 *
 * Pantone 16-4725 TPX Scuba Blue: #00B2CA
 */

@font-face {
    font-family: 'simplifica';
    src: url('fonts/simplifica/simplifica_typeface-webfont.eot');
    src: url('fonts/simplifica/simplifica_typeface-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/simplifica/simplifica_typeface-webfont.woff2') format('woff2'),
         url('fonts/simplifica/simplifica_typeface-webfont.woff') format('woff'),
         url('fonts/simplifica/simplifica_typeface-webfont.ttf') format('truetype'),
         url('fonts/simplifica/simplifica_typeface-webfont.svg#simplificasimplifica') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'opensans';
    src: url('fonts/opensans/opensans-regular-webfont.eot');
    src: url('fonts/opensans/opensans-regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/opensans/opensans-regular-webfont.woff2') format('woff2'),
         url('fonts/opensans/opensans-regular-webfont.woff') format('woff'),
         url('fonts/opensans/opensans-regular-webfont.ttf') format('truetype'),
         url('fonts/opensans/opensans-regular-webfont.svg#open_sansregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

html, button, input, select, textarea, .pure-g [class *= "pure-u"] {
  font-family: opensans;
}

body {
  padding: 5px;
}

a {
  color: #333;
}

#logo {
  background: url(../images/logo.png) top left no-repeat;
  height: 71px;
  margin: 0 auto;
  text-indent: -99999px;
  width: 118px;
}

#menu {
  font-family: simplifica;
  font-size: 21px;
  overflow: hidden;
  margin-top: 15px;
  padding: 0;
  text-align: center;
}

#navbar {
  margin: 30px 5px 20px 5px;
  overflow: hidden;
}

@media screen and (min-width: 30em) {
  #logo { float: left; }
  #menu { float: right; margin: 0; }
  #navbar { margin: 30px 5px 50px 5px; }
}

#menu li {
  display: inline;
  list-style: none;
  line-height: 71px;
}

#menu a {
  border-left: 1px solid #00B2CA;
  letter-spacing: 1px;
  margin: 0 0 0 1em;
  padding: 0 0 0 1em;
  text-decoration: none;
  text-transform: uppercase;
}

#menu li:first-child a {
  border: 0;
}

#menu a.active,
#menu a:hover {
  color: #999;
}

#main {
  margin: 0 auto;
  max-width: 1170px;
  width: 100%;
}

#title {
  color: #666;
  font-family: simplifica;
  font-size: 2em;
  font-weight: normal;
  text-align: center;
  text-transform: uppercase;
}

#subtitle {
  color: #999;
  font-family: simplifica;
  font-size: 1.5em;
  font-weight: normal;
  margin-bottom: 100px;
  text-align: center;
}

.project {
  font-family: simplifica;
  margin: 5px;
  position: relative;
}

.project a {
  background: rgb(0, 0, 0);
  background: rgba(0, 0, 0, 0.85);
  color: #00b2ca;
  height: 100%;
  position: absolute;
  text-transform: uppercase;
  width: 100%;

  opacity: 0;
  filter: alpha(opacity=0);

  -webkit-transition: all 100ms linear;
  -moz-transition: all 100ms linear;
  -o-transition: all 100ms linear;
  -ms-transition: all 100ms linear;
  transition: all 100ms linear;
}

.project a:hover {
  opacity: 1;
  filter: alpha(opacity=100);

  -webkit-transition: all 100ms linear;
  -moz-transition: all 100ms linear;
  -o-transition: all 100ms linear;
  -ms-transition: all 100ms linear;
  transition: all 100ms linear;
}

.project-name {
  font-size: 30px;
  left: 0;
  margin-top: -0.5em;
  padding: 10px;
  position: absolute;
  right: 0;
  text-align: center;
  top: 50%;
}

.project-img {
  display: inline-block;
  margin-bottom: 20px;
}

/* http://webdesignerwall.com/tutorials/css-elastic-videos */

.project-video {
  height: 0;
  margin-bottom: 20px;
  overflow: hidden;
  padding-bottom: 56.25%; /* 16:9 */
  padding-top: 30px;
  position: relative;
}

.project-video iframe,
.project-video object,
.project-video embed {
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
}

.contents {
  text-align: center;
}

.back-to-top {
  background: url(../images/top.png) rgba(255, 255, 255, 0.5) center center no-repeat;
  bottom: 20px;
  display: block;
  height: 50px;
  opacity: 0;
  position: fixed;
  right: 20px;
  text-indent: -99999px;
  width: 50px;

  -webkit-transition: opacity .3s 0s;
  -moz-transition: opacity .3s 0s;
  transition: opacity .3s 0s;
}

.about-intro {
  font-style: italic;
}

